Fix footer and content spacing in /explore

--- a/static/css/explore.scss
+++ b/static/css/explore.scss
@@ -45,7 +45,7 @@
 
 #explore.main-content {
   flex-grow: 1;
-  padding-top: 64px;
+  padding-top: 100px;
 }
 
 #insight-lhs {
