--- a/static/css/tools/base_tools.scss
+++ b/static/css/tools/base_tools.scss
@@ -32,8 +32,9 @@ body {
 }
 
 #main-footer {
-  margin-top: 0 !important;
-  padding-top: 0 !important;
+  padding: 3rem 0 !important;
+  // margin-top: 0 !important;
+  // padding-top: 0 !important;
 }
 
 #main-footer .container {
